deployment/k8s/audit-sink.yaml
apiVersion: v1
kind: List
metadata: {}
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: apisnoop-auditlogger
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.apisnoop.auditlogger: apisnoop-auditlogger
    template:
      metadata:
        labels:
          io.apisnoop.auditlogger: apisnoop-auditlogger
      spec:
        containers:
          - name: apisnoop-auditlogger
            image: "raiinbow/auditlogger:2020-01-20-14-30"
            #command:
            #  - "sleep"
            #args: 
            #  - "+Inf"
            ports:
              - containerPort: 9900
- apiVersion: v1
  kind: Service
  metadata:
    name: apisnoop-auditlogger
  spec:
    ports:
      - port: 9900
        targetPort: 9900
    selector:
      io.apisnoop.auditlogger: apisnoop-auditlogger
    clusterIP: 10.96.96.96
    type: ClusterIP
- apiVersion: auditregistration.k8s.io/v1alpha1
  kind: AuditSink
  metadata:
    name: auditlogger
  spec:
    policy:
      level: Metadata
      stages:
      - ResponseComplete
    webhook:
      throttle:
        qps: 10
        burst: 15
      clientConfig:
        #url: "http://apisnoop-auditlogger.kube-system.svc.cluster.local:9900/events"
        # svc cluster ip of apisnoop-auditlogger
        url: "http://10.96.96.96:9900/events"
