deployment/k8s/graphql.yaml
apiVersion: v1
kind: List
metadata: {}
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: hasura
  spec:
    type: ClusterIP
    clusterIP: None
    selector:
      io.apisnoop.graphql: hasura
    ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
- apiVersion: v1
  kind: Service
  metadata:
    name: postgres
  spec:
    selector:
      io.apisnoop.db: postgres
    ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: hasura
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.apisnoop.graphql: hasura
    template:
      metadata:
        labels:
          io.apisnoop.graphql: hasura
      spec:
        restartPolicy: Always
        containers:
        - name: hasura
          image: "raiinbow/hasura:2020-01-09-09-01"
          ports:
          - containerPort: 8080
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: postgres
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.apisnoop.db: postgres
    template:
      metadata:
        labels:
          io.apisnoop.db: postgres
      spec:
        restartPolicy: Always
        containers:
        - name: postgres
          image: "raiinbow/postgres:2019-12-03-14-19"
          ports:
          - containerPort: 5432
          livenessProbe:
            exec:
              command:
              - "pg_isready"
              - "-U"
              - "apisnoop"
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
