deployment/k8s/kubemacs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubemacs
  labels:
    environment: production
---
apiVersion: v1
kind: Service
metadata:
  name: kubemacs-tilt
  namespace: kubemacs
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: kubemacs
  ports:
  - name: "10350"
    port: 10350
    targetPort: 10350
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubemacs
  namespace: kubemacs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubemacs
  template:
    metadata:
      labels:
        app: kubemacs
    spec:
      serviceAccountName: admin-kubemacs
      containers:
      - name: kubemacs
        image: gcr.io/apisnoop/kubemacs:0.9.21
        volumeMounts:
          - mountPath: '/home/ii/workspace'
            name: kubemacs-hostpath
          - name: docker
            mountPath: /var/run/docker.sock
          - name: ssh-agent
            mountPath: /tmp/ssh-agent.sock
      volumes:
        - name: kubemacs-hostpath
          hostPath:
            path: /workspace
        - name: docker
          hostPath:
            path: /var/run/docker.sock
            type: Socket
        - name: ssh-agent
          hostPath:
            path: /var/run/ssh-agent.sock
            type: Socket
