deployment/k8s/pgadmin.yaml
apiVersion: v1
kind: List
metadata: {}
items:
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: pgadmin-configmap
  data:
    servers.json: |
      { "Servers": { "1": {
        "Name": "apisnoop",
        "Group": "Servers",
        "Host": "postgres",
        "HostAddr":  "10.96.112.46",
        "Port": 5432,
        "MaintenanceDB": "apisnoop",
        "Username": "apisnoop",
        "SSLMode": "prefer",
        "Comment": "APISnoop Database",
        "Password": "s3cretsauc3",
        "PassFile": "/pgadmin-config/pgpass",
        "SSLCompression": 0,
        "Timeout": 10,
        "UseSSHTunnel": 0,
        "TunnelPort": "22",
        "TunnelAuthentication": 0
       }}}
    pgpass: |
      postgres:5432:apisnoop:apisnoop:s3cretsauc3
      10.96.112.46:5432:apisnoop:apisnoop:s3cretsauc3
- apiVersion: v1
  kind: Service
  metadata:
    name: pgadmin
  spec:
    selector:
      io.apisnoop.dba: pgadmin
    ports:
    - name: "http"
      port: 80
      targetPort: 80
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: pgadmin
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.apisnoop.dba: pgadmin
    template:
      metadata:
        labels:
          io.apisnoop.dba: pgadmin
      spec:
        securityContext:
          runAsUser: 5050
          fsGroup: 5050
        restartPolicy: Always
        containers:
        - name: pgadmin
          image: "dpage/pgadmin4:4.17"
          ports:
          - containerPort: 80
          volumeMounts:
            - name: pgadmin-config
              mountPath: /pgadmin-config/
        volumes:
          - name: pgadmin-configmap
            configMap:
              name: pgadmin-configmap
              items:
                - key: servers.json
                  path: servers.json
                  mode: 256
                - key: pgpass
                  path: pgpass
                  mode: 256
          - name: pgadmin-config
            emptyDir:
              medium: "Memory"
          # https://www.pgadmin.org/docs/pgadmin4/latest/container_deployment.html#http-via-nginx
          # - name: SCRIPT_NAME
          #   value: "/pgadmin"
